[gd_scene load_steps=10 format=3 uid="uid://biamp6v4ql1tg"]

[ext_resource type="Script" path="res://Interface/GameplayUI/gameplay_ui.gd" id="1_3g285"]
[ext_resource type="Texture2D" uid="uid://eelm5gl0chxa" path="res://Interface/Icons/Other/BuyUnit.png" id="2_j5gt5"]
[ext_resource type="Texture2D" uid="uid://du0nitb8n12ev" path="res://Interface/Icons/Other/BuyCannon.png" id="3_4kjsh"]
[ext_resource type="Texture2D" uid="uid://ep3jifsfn334" path="res://Interface/Icons/Other/BuyTower.png" id="4_jbv1a"]
[ext_resource type="Texture2D" uid="uid://bhpntg7w6wa2i" path="res://Interface/Icons/Other/SellTower.png" id="5_c5lqu"]
[ext_resource type="Texture2D" uid="uid://bkg2036vo32kw" path="res://Interface/Icons/Other/AdvanceAge.png" id="6_yhv6i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1pcn6"]
size = Vector2(30, 800)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4feka"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yaa21"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.705882)

[node name="GameplayUI" type="Control"]
z_index = 5
custom_minimum_size = Vector2(1600, 900)
layout_direction = 2
layout_mode = 3
anchors_preset = 0
offset_right = 1600.0
offset_bottom = 900.0
mouse_filter = 1
script = ExtResource("1_3g285")

[node name="ResourcesContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GoldLabel" type="Label" parent="ResourcesContainer"]
layout_mode = 2
text = "Gold: 0"

[node name="ExperienceLabel" type="Label" parent="ResourcesContainer"]
layout_mode = 2
text = "Experience: 0"

[node name="PurchasesContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/h_separation = 10
columns = 5

[node name="UnitsButton" type="Button" parent="PurchasesContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PurchasesContainer/UnitsButton"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_j5gt5")

[node name="CannonsButton" type="Button" parent="PurchasesContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PurchasesContainer/CannonsButton"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_4kjsh")

[node name="BuyTowerButton" type="Button" parent="PurchasesContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PurchasesContainer/BuyTowerButton"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_jbv1a")

[node name="SellCannonButton" type="Button" parent="PurchasesContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PurchasesContainer/SellCannonButton"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_c5lqu")

[node name="AdvanceAgeButton" type="Button" parent="PurchasesContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PurchasesContainer/AdvanceAgeButton"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_yhv6i")

[node name="AvailableUnits" type="GridContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/h_separation = 10
columns = 5

[node name="Unit1" type="Button" parent="AvailableUnits"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="AvailableUnits/Unit1"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Unit2" type="Button" parent="AvailableUnits"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="AvailableUnits/Unit2"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Unit3" type="Button" parent="AvailableUnits"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="AvailableUnits/Unit3"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Unit4" type="Button" parent="AvailableUnits"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
text = "UNIT"

[node name="TextureRect" type="TextureRect" parent="AvailableUnits/Unit4"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GoBackButton" type="Button" parent="AvailableUnits"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
text = "BACK"

[node name="AvailableCannons" type="GridContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/h_separation = 10
columns = 5

[node name="Cannon1" type="Button" parent="AvailableCannons"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="AvailableCannons/Cannon1"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Cannon2" type="Button" parent="AvailableCannons"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="AvailableCannons/Cannon2"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Cannon3" type="Button" parent="AvailableCannons"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="AvailableCannons/Cannon3"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Cannon4" type="Button" parent="AvailableCannons"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="AvailableCannons/Cannon4"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GoBackButton" type="Button" parent="AvailableCannons"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
text = "BACK"

[node name="MoveScreenLeft" type="Area2D" parent="."]
position = Vector2(15, 500)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveScreenLeft"]
shape = SubResource("RectangleShape2D_1pcn6")

[node name="MoveScreenRight" type="Area2D" parent="."]
position = Vector2(1585, 500)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveScreenRight"]
shape = SubResource("RectangleShape2D_1pcn6")

[node name="CostInfo" type="Label" parent="."]
visible = false
layout_direction = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 159.0
offset_right = -50.0
offset_bottom = 182.0
grow_horizontal = 0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "COST: 2500000"

[node name="SpellButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 65)
layout_mode = 0
offset_left = 1350.0
offset_top = 90.0
offset_right = 1550.0
offset_bottom = 155.0

[node name="TextureRect" type="TextureRect" parent="SpellButton"]
custom_minimum_size = Vector2(200, 65)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CooldownBar" type="ProgressBar" parent="SpellButton"]
custom_minimum_size = Vector2(65, 200)
layout_mode = 1
offset_top = 65.0
offset_right = 65.0
offset_bottom = 265.0
rotation = 4.71239
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_4feka")
theme_override_styles/fill = SubResource("StyleBoxFlat_yaa21")
max_value = 45.0
step = 0.1
show_percentage = false

[connection signal="button_down" from="PurchasesContainer/UnitsButton" to="." method="_on_units_button_button_down"]
[connection signal="mouse_entered" from="PurchasesContainer/UnitsButton" to="." method="_on_units_button_mouse_entered"]
[connection signal="mouse_exited" from="PurchasesContainer/UnitsButton" to="." method="_on_units_button_mouse_exited"]
[connection signal="button_down" from="PurchasesContainer/CannonsButton" to="." method="_on_cannons_button_button_down"]
[connection signal="mouse_entered" from="PurchasesContainer/CannonsButton" to="." method="_on_cannons_button_mouse_entered"]
[connection signal="mouse_exited" from="PurchasesContainer/CannonsButton" to="." method="_on_cannons_button_mouse_exited"]
[connection signal="button_down" from="PurchasesContainer/BuyTowerButton" to="." method="_on_buy_tower_button_button_down"]
[connection signal="mouse_entered" from="PurchasesContainer/BuyTowerButton" to="." method="_on_buy_tower_button_mouse_entered"]
[connection signal="mouse_exited" from="PurchasesContainer/BuyTowerButton" to="." method="_on_buy_tower_button_mouse_exited"]
[connection signal="button_down" from="PurchasesContainer/SellCannonButton" to="." method="_on_sell_cannon_button_button_down"]
[connection signal="mouse_entered" from="PurchasesContainer/SellCannonButton" to="." method="_on_sell_cannon_button_mouse_entered"]
[connection signal="mouse_exited" from="PurchasesContainer/SellCannonButton" to="." method="_on_sell_cannon_button_mouse_exited"]
[connection signal="button_down" from="PurchasesContainer/AdvanceAgeButton" to="." method="_on_advance_age_button_button_down"]
[connection signal="mouse_entered" from="PurchasesContainer/AdvanceAgeButton" to="." method="_on_advance_age_button_mouse_entered"]
[connection signal="mouse_exited" from="PurchasesContainer/AdvanceAgeButton" to="." method="_on_advance_age_button_mouse_exited"]
[connection signal="button_down" from="AvailableUnits/Unit1" to="." method="_on_unit_1_button_down"]
[connection signal="mouse_entered" from="AvailableUnits/Unit1" to="." method="_on_unit_1_mouse_entered"]
[connection signal="mouse_exited" from="AvailableUnits/Unit1" to="." method="_on_unit_1_mouse_exited"]
[connection signal="button_down" from="AvailableUnits/Unit2" to="." method="_on_unit_2_button_down"]
[connection signal="mouse_entered" from="AvailableUnits/Unit2" to="." method="_on_unit_2_mouse_entered"]
[connection signal="mouse_exited" from="AvailableUnits/Unit2" to="." method="_on_unit_2_mouse_exited"]
[connection signal="button_down" from="AvailableUnits/Unit3" to="." method="_on_unit_3_button_down"]
[connection signal="mouse_entered" from="AvailableUnits/Unit3" to="." method="_on_unit_3_mouse_entered"]
[connection signal="mouse_exited" from="AvailableUnits/Unit3" to="." method="_on_unit_3_mouse_exited"]
[connection signal="button_down" from="AvailableUnits/Unit4" to="." method="_on_unit_4_button_down"]
[connection signal="mouse_entered" from="AvailableUnits/Unit4" to="." method="_on_unit_4_mouse_entered"]
[connection signal="mouse_exited" from="AvailableUnits/Unit4" to="." method="_on_unit_4_mouse_exited"]
[connection signal="button_down" from="AvailableUnits/GoBackButton" to="." method="_on_go_back_button_button_down"]
[connection signal="button_down" from="AvailableCannons/Cannon1" to="." method="_on_cannon_1_button_down"]
[connection signal="mouse_entered" from="AvailableCannons/Cannon1" to="." method="_on_cannon_1_mouse_entered"]
[connection signal="mouse_exited" from="AvailableCannons/Cannon1" to="." method="_on_cannon_1_mouse_exited"]
[connection signal="button_down" from="AvailableCannons/Cannon2" to="." method="_on_cannon_2_button_down"]
[connection signal="mouse_entered" from="AvailableCannons/Cannon2" to="." method="_on_cannon_2_mouse_entered"]
[connection signal="mouse_exited" from="AvailableCannons/Cannon2" to="." method="_on_cannon_2_mouse_exited"]
[connection signal="button_down" from="AvailableCannons/Cannon3" to="." method="_on_cannon_3_button_down"]
[connection signal="mouse_entered" from="AvailableCannons/Cannon3" to="." method="_on_cannon_3_mouse_entered"]
[connection signal="mouse_exited" from="AvailableCannons/Cannon3" to="." method="_on_cannon_3_mouse_exited"]
[connection signal="button_down" from="AvailableCannons/Cannon4" to="." method="_on_cannon_4_button_down"]
[connection signal="mouse_entered" from="AvailableCannons/Cannon4" to="." method="_on_cannon_4_mouse_entered"]
[connection signal="mouse_exited" from="AvailableCannons/Cannon4" to="." method="_on_cannon_4_mouse_exited"]
[connection signal="button_down" from="AvailableCannons/GoBackButton" to="." method="_on_go_back_button_button_down"]
[connection signal="mouse_entered" from="MoveScreenLeft" to="." method="_on_move_screen_left_mouse_entered"]
[connection signal="mouse_exited" from="MoveScreenLeft" to="." method="_on_move_screen_left_mouse_exited"]
[connection signal="mouse_entered" from="MoveScreenRight" to="." method="_on_move_screen_right_mouse_entered"]
[connection signal="mouse_exited" from="MoveScreenRight" to="." method="_on_move_screen_right_mouse_exited"]
[connection signal="button_down" from="SpellButton" to="." method="_on_spell_button_button_down"]
[connection signal="mouse_entered" from="SpellButton" to="." method="_on_spell_button_mouse_entered"]
[connection signal="mouse_exited" from="SpellButton" to="." method="_on_spell_button_mouse_exited"]
